option java_outer_classname = "LCDriverNotCard";
option java_package = "com.navinfo.opentsp.platform.location.protocol.dataaccess.common";

message DriverNotCard{
	required int32 notCardTime = 1;
}