option java_outer_classname = "LCAreaAlarmSettingRes";
option java_package = "com.navinfo.opentsp.platform.location.protocol.terminal";

message AreaAlarmSettingRes{
	repeated AreaAlarmSetting settings = 1;
}

message AreaAlarmSetting{
	required int64 areaId = 1;
	required int32 areaProperty = 2;
	optional int64 startDate = 3;
	optional int64 endDate = 4;
	optional int32 maxSpeed = 5;
	optional int32 speedingContinuousTime = 6;
}